// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Accessory: Represents car accessories available in the dealership.
Appointment: Represents appointments made by customers for car services.
Customer: Represents customers of the dealership.
Service: Represents services offered by the dealership's service department.
Car: Represents individual cars in the inventory.
Dealership: Represents a car dealership entity.
CarModel: Represents different car models available at the dealership.
Employee: Represents employees working at the dealership.
Inventory: Represents current status of cars available in the warehouse.
Manufacturer: Represents car manufacturers.
Review: Represents customer reviews for the cars.
Sale: Represents sales transactions at the dealership.
'''
}

Table Accessory {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    }

Table Appointment {
    id INTEGER [primary key]
    customer_id INTEGER 
    service_id INTEGER 
    appointment_date DATE 
    is_confirmed BOOLEAN 
    }

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    phone_number VARCHAR 
    }

Table Service {
    id INTEGER [primary key]
    car_id INTEGER 
    date DATE 
    description VARCHAR 
    cost FLOAT 
    }

Table Car {
    id INTEGER [primary key]
    vin VARCHAR 
    model_id INTEGER 
    dealership_id INTEGER 
    year INTEGER 
    price FLOAT 
    }

Table Dealership {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    }

Table CarModel {
    id INTEGER [primary key]
    name VARCHAR 
    manufacturer VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    role VARCHAR 
    hire_date DATE 
    salary FLOAT 
    }

Table Inventory {
    id INTEGER [primary key]
    car_id INTEGER 
    quantity INTEGER 
    }

Table Manufacturer {
    id INTEGER [primary key]
    name VARCHAR 
    origin_country VARCHAR 
    }

Table Review {
    id INTEGER [primary key]
    customer_id INTEGER 
    car_id INTEGER 
    rating INTEGER 
    comment VARCHAR 
    }

Table Sale {
    id INTEGER [primary key]
    car_id INTEGER 
    customer_id INTEGER 
    sale_date DATE 
    sale_price FLOAT 
    }



// Relationships
    Ref: Appointment.(customer_id) < Customer.(id)
    Ref: Appointment.(service_id) < Service.(id)
    Ref: Service.(car_id) < Car.(id)
    Ref: Car.(dealership_id) < Dealership.(id)
    Ref: Car.(model_id) < CarModel.(id)
    Ref: Inventory.(car_id) < Car.(id)
    Ref: Review.(car_id) < Car.(id)
    Ref: Review.(customer_id) < Customer.(id)
    Ref: Sale.(car_id) < Car.(id)
    Ref: Sale.(customer_id) < Customer.(id)
